--- a/css/layout.css
+++ b/css/layout.css
@@ -40,6 +40,7 @@
 .header .nav_1 h1.logo{position:absolute; left:50%; top:50px; margin-left:-42px;}
 .header .nav_1 h1.logo a{ display:block; width:84px; height:285px; background:url(../images/logo.png) center center no-repeat; background-size: 84px auto; text-indent:-9999px; }
 .header h2.logo_spring{ width:50px; height:50px; background:url(../images/logo_spring.png) center center no-repeat; background-size:50px auto; position:absolute; left:50%; margin-left:-25px; bottom:30px;}
+.header p.slogan{ width:80px; height:400px; background:url(../images/slogan.png) center center no-repeat; position:absolute; right:100px; top:100px;}
 
 .header .nav_1 .menu_1{ width:50%; height:130px; padding-top:20px; text-align:center; border-top:2px solid #d7b98e; border-bottom:2px solid #d7b98e; position:absolute; left:50%; margin-left:-25%;/*置中*/ bottom:120px;}
 .header .nav_1 .menu_1 a{ display:block; height:35px; line-height:35px; padding-left:20px; color:#fff; text-align:center; letter-spacing:2px; position:relative;}
@@ -62,6 +63,8 @@
 /*小於768*/
 @media only screen and (max-width:767px){
 .header .nav_1{width:100%; height:100%; background:rgba(51,51,51,0.6); position:absolute; left:0px; top:auto; bottom:0px;}
+.header p.slogan{ display:none;}
+
 .header .nav_1 .menu_1{ display:none;}
 
 .menu_2{ display:block; }
@@ -142,7 +145,7 @@
 
 
 /*part_thumb_2==================*/
-.part_thumb_2{ max-width:900px; margin:0 auto;}
+.part_thumb_2{ max-width:900px; margin:0 auto;padding-top:50px; }
 .part_thumb_2 .box_1{ width:300px; float:left;}
 .part_thumb_2 .box_1 .item{width:300px; position:relative;}
 .part_thumb_2 .box_1 .item:after{ display:block; content:""; width:100%; height:60px; background-image:linear-gradient(to bottom,  rgba(229,229,229,0) 0%,rgba(0,0,0,0.9) 100%); position:absolute; left:0px; bottom:0px;}
