--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,8 @@
 /*================================layout================================================*/
 /*版型=============================*/
-.header_box{ clear:both; background:url(../images/banner.jpg) repeat-x;}
-.header{ max-width:1400px; height:650px; margin:0 auto; background:url(../images/banner.jpg) center center no-repeat; position:relative; }
-
+.header_box{ width:100%; clear:both; background:url(../images/banner.jpg) center bottom no-repeat; background-size:cover; }
+.header{height:650px; margin:0 auto; position:relative; }
+.header:after{ display:block; content:""; width:100%; height:100%; background:rgba(0,0,0,0.5);}
 
 /*小於768*/
 @media only screen and (max-width:767px){
@@ -13,10 +13,13 @@
 .container_box{ clear:both;}
 .container{ width:100%; margin:0 auto; background: url(../images/bg.png) repeat; }
 .footer_box{ clear:both;background:#554236;}
-.footer{ max-width:1200px; margin:0 auto; height:30px; line-height:30px; }
-.footer p{ color:#fff;}
+.footer{ max-width:1200px; margin:0 auto; height:30px; line-height:30px; padding:0 15px; }
+.footer p{ display: inline-block;  color:#fff; font-size: 13px;}
+.footer p.right{ float:right; }
+.footer a{ color: #fff;}
 .container section{}
 .container section .inner{ max-width:1200px; margin:0px auto; padding:60px 0;}
+.container section .inner.size2{max-width:1600px; margin:0px auto; padding:60px 0;}
 
 .container section.style_1{ background:#efeede;}
 .container section.style_1 .inner{ background:url(../images/bg_2.svg) center bottom no-repeat; background-size:auto 155px;}
@@ -25,24 +28,34 @@
 
 /*小於768*/
 @media only screen and (max-width:767px){
+.header_box{ background-position:center left; background-size:cover;}
 .container section .inner{ padding:30px;}
 .container section.style_1 .inner{}
+.container .inner.size2{ display:none;}
 }
 
 
+/*小於320*/
+@media only screen and (max-width:320px){
+	.footer{ height: auto; padding: 10px; text-align: left;}
+	.footer p.right{ float: none;}
+}
 
 
 /*=================header===================*/
 
 
 /*選單====================================*/
-.header .nav_1{ width:230px; height:650px; background:rgba(0,0,0,0.8); position:absolute; left:0px; top:0px;}
-.header .nav_1 h1.logo{position:absolute; left:50%; top:50px; margin-left:-42px;}
-.header .nav_1 h1.logo a{ display:block; width:84px; height:285px; background:url(../images/logo.png) center center no-repeat; background-size: 84px auto; text-indent:-9999px; }
-.header h2.logo_spring{ width:50px; height:50px; background:url(../images/logo_spring.png) center center no-repeat; background-size:50px auto; position:absolute; left:50%; margin-left:-25px; bottom:30px;}
 
-.header .nav_1 .menu_1{ width:50%; height:130px; padding-top:20px; text-align:center; border-top:2px solid #d7b98e; border-bottom:2px solid #d7b98e; position:absolute; left:50%; margin-left:-25%;/*置中*/ bottom:120px;}
-.header .nav_1 .menu_1 a{ display:block; height:35px; line-height:35px; padding-left:20px; color:#fff; text-align:center; letter-spacing:2px; position:relative;}
+.header h1.logo{ position:absolute; left:50%; top:50px; margin-left:-42px;text-align:center;}
+.header h1.logo a{ display:block; width:84px; height:285px; background:url(../images/logo.png) center center no-repeat; background-size: 84px auto; text-indent:-9999px; }
+.header p.slogan{ width:380px; height:70px; background:url(../images/slogan.png) center center no-repeat; position:absolute; left:50%; margin-left:-190px; bottom:180px; z-index:10;}
+
+.header .nav_1{ width:100%; height:90px; padding-top:32px; background:rgba(0,0,0,0.8); position:absolute; left:0px; bottom:0px;}
+.header .nav_1 .menu_1{ width:370px; margin:0 auto; }
+.header .nav_1 .menu_1 a{ display:block; height:35px; line-height:35px; float:left; margin-right:20px; padding-left:30px; color:#fff; text-align:center; letter-spacing:2px; position:relative;}
+.header .nav_1 .menu_1 a:nth-last-of-type(1){ margin-right:0px;}
+.header .nav_1 .menu_1 a:hover{ color:#c4a476;}
 .header .nav_1 .menu_1 a:before{display:block; content:""; width:25px; height:25px; position:absolute; left:0px; top:2px;}
 .header .nav_1 .menu_1 a:nth-of-type(1):before{ background:url(../images/icon_menu.svg) left top no-repeat; background-size:25px;}
 .header .nav_1 .menu_1 a:nth-of-type(2):before{ background:url(../images/icon_menu.svg) left center no-repeat; background-size:25px;}
@@ -61,7 +74,9 @@
 
 /*小於768*/
 @media only screen and (max-width:767px){
-.header .nav_1{width:100%; height:100%; background:rgba(51,51,51,0.6); position:absolute; left:0px; top:auto; bottom:0px;}
+.header .nav_1{ display:none;}
+.header p.slogan{ display:none;}
+
 .header .nav_1 .menu_1{ display:none;}
 
 .menu_2{ display:block; }
@@ -79,6 +94,10 @@
 .block_1 .block_title h2.title_1{ background:url(../images/icon_title_1.svg) center center no-repeat; background-size:218px auto;}
 .block_1 .block_title h2.title_2{background:url(../images/icon_title_2.svg) center center no-repeat; background-size:218px auto;}
 .block_1 .block_title h2.title_3{background:url(../images/icon_title_3.svg) center center no-repeat; background-size:218px auto;}
+
+.block_1 .block_title h2.title_4{background:url(../images/icon_title_3.svg) center center no-repeat; background-size:218px auto;}
+
+
 
 /*part_pictxt_1==================*/
 .part_pictxt_1{ clear:both;}
@@ -125,11 +144,14 @@
 .part_thumb_1{ width:80%; margin:0 auto;}
 .part_thumb_1 .piece{ width:40%; float:left; margin-right:8%; margin-bottom:50px; }
 .part_thumb_1 .piece:nth-of-type(2n){float:right; margin-right:0%;}
-.part_thumb_1 .piece a{ display:block; width:100%; height:0px; padding-bottom:63%; overflow:hidden; background: #fff; border:10px solid #efbb24; border-radius:10px; position:relative;}
-.part_thumb_1 .piece a:hover img{ opacity:0.8;}
-.part_thumb_1 .piece a h3{ width:145px; height:40px;line-height:44px; padding-left:25px;  text-align:center; background:#efbb24;border-radius:6px; position:absolute; left:-10px; top:-5px; z-index:1;}
-.part_thumb_1 .piece a img{ width:100%; height:auto;}
-.part_thumb_1 .piece a h3 i.icon_site{ display:block; width:20px; height:40px; background:url(../images/icon_site.svg) center center no-repeat; background-size: 18px auto; position:absolute; left:12px; top:0px; z-index:2;}
+.part_thumb_1 .piece a{ display: block; }
+
+.part_thumb_1 .piece a h3{ height:60px; line-height:60px; padding-left:25px; margin-bottom: 20px; background: url(../images/part_thumb1_titile_bg.svg) no-repeat left center; background-size: 70px auto; border-bottom: 3px solid #893448; transition: all .3s;}
+.part_thumb_1 .piece p.pic{width:100%; height:0px; padding-bottom:63%; overflow:hidden; }
+.part_thumb_1 .piece p.pic img{ width:100%; height:auto;transform:scale(0.95); transition: all .3s;}
+/*hover*/
+.part_thumb_1 .piece p.pic:hover img{ opacity:0.9;transform:scale(1);}
+.part_thumb_1 .piece a:hover h3{ font-size: 21px;}
 
 
 /*小於768*/
@@ -142,7 +164,7 @@
 
 
 /*part_thumb_2==================*/
-.part_thumb_2{ max-width:900px; margin:0 auto;}
+.part_thumb_2{ max-width:900px; margin:0 auto;padding-top:50px; }
 .part_thumb_2 .box_1{ width:300px; float:left;}
 .part_thumb_2 .box_1 .item{width:300px; position:relative;}
 .part_thumb_2 .box_1 .item:after{ display:block; content:""; width:100%; height:60px; background-image:linear-gradient(to bottom,  rgba(229,229,229,0) 0%,rgba(0,0,0,0.9) 100%); position:absolute; left:0px; bottom:0px;}
@@ -160,3 +182,21 @@
 .part_thumb_2 .box_1 .item{ width:100%;}
 .part_thumb_2 .box_2{ width:100%; float:none;}
 }
+
+
+/*map*/
+
+.mapcontent{ position: relative; height: 0; padding-bottom: 56.25%; overflow: hidden;}
+.mapcontent iframe,
+.mapcontent object,
+.mapcontent embed {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
+
+
+
+
+
+
+
+
+
+
